--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="theme-color" content="#ABB3A5" media="(prefers-color-scheme: dark)"/>
+    <meta name="theme-color" content="#50584B" media="(prefers-color-scheme: dark)"/>
     <meta name="theme-color" content="#ABB3A5" media="(prefers-color-scheme: light)"/>
 
     <meta
